# droneautomation

./: LICENSE  README.md  log.txt
devel/: .catkin  .rosinstall  setup.sh
devel/include/dji_sdk/: ActivationRequest.h  ActivationResponse.h  CameraActionRequest.h  CameraActionResponse.h  DroneArmControlRequest.h  DroneArmControlResponse.h  DroneTaskControlRequest.h  DroneTaskControlResponse.h  Gimbal.h  MFIOConfigRequest.h  MFIOConfigResponse.h  MFIOSetValueRequest.h  MFIOSetValueResponse.h  MissionHotpointTask.h  MissionHpActionRequest.h  MissionHpActionResponse.h  MissionHpGetInfoRequest.h  MissionHpGetInfoResponse.h  MissionHpResetYawRequest.h  MissionHpResetYawResponse.h  MissionHpUpdateRadiusRequest.h  MissionHpUpdateRadiusResponse.h  MissionHpUpdateYawRateRequest.h  MissionHpUpdateYawRateResponse.h  MissionHpUploadRequest.h  MissionHpUploadResponse.h  MissionStatusRequest.h  MissionStatusResponse.h  MissionWaypoint.h  MissionWaypointAction.h  MissionWaypointTask.h  MissionWpActionRequest.h  MissionWpActionResponse.h  MissionWpGetInfoRequest.h  MissionWpGetInfoResponse.h  MissionWpGetSpeedRequest.h  MissionWpGetSpeedResponse.h  MissionWpSetSpeedRequest.h  MissionWpSetSpeedResponse.h  MissionWpUploadRequest.h  (+22 more)
devel/lib/dji_sdk_demo/: demo_camera_gimbal  demo_flight_control  demo_landing  demo_local_position_control  demo_mfio  demo_mission  demo_mobile_comm
devel/lib/guidance/: guidanceNode  guidanceNodeCalibration  guidanceNodeTest
devel/lib/pkgconfig/: cv_bridge.pc  dji_sdk.pc  dji_sdk_demo.pc  guidance.pc  image_geometry.pc  opencv_tests.pc
devel/share/cv_bridge/cmake/: cv_bridgeConfig.cmake
src/Guidance-SDK-ROS-master/: CMakeLists.txt  package.xml
src/Guidance-SDK-ROS-master/src/: GuidanceNode.cpp  GuidanceNodeCalibration.cpp  GuidanceNodeOriginal.cpp  GuidanceNodeTest.cpp  GuidanceNodeTestMaga.cpp
src/Onboard-SDK-ROS-3.6/dji_sdk/: CMakeLists.txt  package.xml
src/Onboard-SDK-ROS-3.6/dji_sdk_demo/: CMakeLists.txt  package.xml
(+23 files in other folders)
